Renamed policy store schema namespace config

--- a/TinyTodo.Web/appsettings.json
+++ b/TinyTodo.Web/appsettings.json
@@ -10,7 +10,7 @@
   },
   "VerifiedPermissions": {
     "PolicyStoreId": "XXXXXXXXXXXXX",
-    "PolicyStoreNamespace": "TinyTodoList",
+    "PolicyStoreSchemaNamespace": "TinyTodoList",
     "TodoListSharedAccessPolicyTemplateId": "XXXXXXXXXXXXX",
     "TodoListSharedAccessWithResharePolicyTemplateId": "XXXXXXXXXXXXX"    
   }, 
