extract Cedar policies into files

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@
 .vscode/*
 !.vscode/tasks.json
 !.vscode/launch.json
+!.vscode/settings.json
+!.vscode/extensions.json
 .history/*
 
 # System files
